--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,29 +1,13 @@
 ---
-name: Pipeline
+name: Pull Request
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  pull_request:
 
 env:
   HELM_EXPERIMENTAL_OCI: true
 
 jobs:
-  conform:
-    runs-on: ubuntu-latest
-    name: Conform
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - uses: siderolabs/conform@v0.1.0-alpha.27
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
   lint:
     runs-on: ubuntu-latest
     name: Lint Charts
@@ -52,5 +36,14 @@ jobs:
 
       - uses: helm/chart-testing-action@v2.4.0
 
-      - name: Lint all charts
-        run: ct lint --all --chart-dirs ${{ matrix.directory }}/charts --config ${{ github.workspace }}/ct.yml
+      - name: List changed charts
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --chart-dirs ${{ matrix.directory }}/charts --config ${{ github.workspace }}/ct.yml)
+          if [[ -n "$changed" ]]; then
+            echo "changed=true" >> ${GITHUB_OUTPUT}
+          fi
+
+      - name: Lint changed charts
+        if: steps.list-changed.outputs.changed == 'true'
+        run: ct lint --chart-dirs ${{ matrix.directory }}/charts --config ${{ github.workspace }}/ct.yml
