--- a/home-assistant/charts/zwave/templates/cronjob.yaml
+++ b/home-assistant/charts/zwave/templates/cronjob.yaml
@@ -10,70 +10,4 @@ spec:
   suspend: false
   concurrencyPolicy: Replace
   jobTemplate:
-    metadata:
-      namespace: {{ .Release.Namespace }}
-    spec:
-      template:
-        metadata:
-          namespace: {{ .Release.Namespace }}
-        spec:
-          restartPolicy: Never
-          affinity:
-            podAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                - labelSelector:
-                    matchExpressions:
-                      - key: app.kubernetes.io/name
-                        operator: In
-                        values:
-                          - home-assistant-zwave
-                  topologyKey: kubernetes.io/hostname
-          containers:
-            - name: backup
-              image: alpine:3.17
-              imagePullPolicy: IfNotPresent
-              command:
-                - /scripts/backup.sh
-              env:
-                - name: DATA_PATH
-                  value: /data
-                - name: GIT_REPO
-                  valueFrom:
-                    configMapKeyRef:
-                      name: zwave-js-git
-                      key: git-repo
-                - name: GIT_USERNAME
-                  valueFrom:
-                    configMapKeyRef:
-                      name: zwave-js-git
-                      key: git-username
-                - name: GIT_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      key: gitlab-token
-                      name: zwave-js-git
-                - name: GIT_CRYPT_KEY
-                  valueFrom:
-                    secretKeyRef:
-                      key: git-crypt-key
-                      name: zwave-js-git
-              volumeMounts:
-                - name: data
-                  mountPath: /data
-                - name: scripts
-                  mountPath: /scripts
-              resources:
-                requests:
-                  cpu: 100m
-                  memory: 128Mi
-                limits:
-                  cpu: 1
-                  memory: 256Mi
-          volumes:
-            - name: data
-              persistentVolumeClaim:
-                claimName: zwave-js-config
-            - name: scripts
-              configMap:
-                name: zwave-js-scripts
-                defaultMode: 511
+    {{- include "zwave.backup_restore.job" . | nindent 4 }}
