--- a/home-assistant/charts/node-red/templates/external-secret-backup.yaml
+++ b/home-assistant/charts/node-red/templates/external-secret-backup.yaml
@@ -2,46 +2,41 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: node-red-credentials
+  name: node-red-backup
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: doppler-auth-home-assistant
   target:
-    name: node-red-credentials
+    name: node-red-backup
   data:
-    - secretKey: NODE_RED_CREDENTIAL_SECRET
+    - secretKey: OIDC_USERNAME
       remoteRef:
         conversionStrategy: Default	
         decodingStrategy: None
-        key: NODE_RED_CREDENTIAL_SECRET
-    - secretKey: NODE_RED_OIDC_ISSUER
+        key: OIDC_USERNAME
+    - secretKey: OIDC_AUTH_TOKEN
       remoteRef:
         conversionStrategy: Default	
         decodingStrategy: None
-        key: NODE_RED_OIDC_ISSUER
-    - secretKey: OIDC_AUTHZ_URL
+        key: OIDC_AUTH_TOKEN
+    - secretKey: OIDC_REFERER
       remoteRef:
         conversionStrategy: Default	
         decodingStrategy: None
-        key: OIDC_AUTHZ_URL
-    - secretKey: OIDC_TOKEN_URL
+        key: OIDC_REFERER
+    - secretKey: GCS_ACCESS_KEY_ID
       remoteRef:
         conversionStrategy: Default	
         decodingStrategy: None
-        key: OIDC_TOKEN_URL
-    - secretKey: OIDC_USER_INFO_URL
+        key: GCS_ACCESS_KEY_ID
+    - secretKey: GCS_SECRET_ACCESS_KEY
       remoteRef:
         conversionStrategy: Default	
         decodingStrategy: None
-        key: OIDC_USER_INFO_URL
-    - secretKey: NODE_RED_OIDC_CLIENT_ID
+        key: GCS_SECRET_ACCESS_KEY
+    - secretKey: S3_ASSETS_BUCKET
       remoteRef:
         conversionStrategy: Default	
         decodingStrategy: None
-        key: NODE_RED_OIDC_CLIENT_ID
-    - secretKey: NODE_RED_OIDC_CLIENT_SECRET
-      remoteRef:
-        conversionStrategy: Default	
-        decodingStrategy: None
-        key: NODE_RED_OIDC_CLIENT_SECRET
+        key: BACKUP_S3_ASSETS_BUCKET
